# CoreScribe

./: Cargo.toml  README.md
.github/workflows/: release.yml  update_readme.yml
src/: audio.rs  inference.rs  lib.rs  main.rs  updater.rs
